# child-story-generator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  USERSTORIES.md  alembic.ini  animate.bat  docker-compose.yml  local-llm-feasibility.md  main.py  pyproject.toml  rebuild.bat
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_characters_table.py  003_add_phase_timings_table.py  004_add_beat_summary.py  005_add_presets_table.py  006_add_text_model_to_presets.py  007_add_video_tracking.py  008_add_character_reference_sheet.py  009_add_character_photo.py  010_add_family_links.py  011_add_character_age.py  012_add_foreign_key_indexes.py
configs/: settings.example.toml  styles.toml
configs/characters/: lana-cat.toml  lana-llama.toml  lana-princess.toml
examples/: dance-and-vaccination.txt
grafana/dashboards/: starlight-overview.json
grafana/provisioning/dashboards/: default.yaml
k8s/: argocd-application.yml  configmap.yml  deployment.yml  frontend-deployment.yml  frontend-service.yml  kustomization.yml  minio-deployment.yml  minio-pvc.yml  minio-service.yml  namespace.yml  nodeport.yml  postgres-nodeport.yml  postgres-pvc.yml  postgres-service.yml  postgres-statefulset.yml  runner-rbac.yml  secrets.yml.example  service.yml  stories-pvc.yml
k8s/monitoring/: starlight-dashboard.yml  starlight-servicemonitor.yml  tempo-configmap.yml  tempo-datasource.yml  tempo-deployment.yml  tempo-pvc.yml  tempo-service.yml
scripts/: animate_poc.py  animation_worker.py  generate_backdrops.py  generate_style_previews.py  migrate_json_to_pg.py
server/: app.py  logging_config.py  schemas.py  telemetry.py
server/routers/: _shared.py  characters.py  config.py  pipeline.py  presets.py  sanity.py  stories.py  worker.py
server/services/: animation_queue.py  cache_gc.py  character_service.py  pipeline_service.py  preset_service.py  sanity_service.py  story_service.py  task_manager.py
src/: models.py  storage.py
src/animator/: generator.py  wan_worker.py
src/artist/: generator.py
src/brain/: cast_extractor.py  client.py  keyframer.py  prompts.py  storyteller.py  translator.py
src/db/: __init__.py  character_repository.py  engine.py  family_repository.py  models.py  repository.py
src/publisher/: color.py  cover.py  layout.py
src/publisher/templates/: page.html  spread.html
src/utils/: config.py  io.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
(+42 files in other folders)
