[project]
name = "starlight-scribe"
version = "0.1.0"
description = "Transform rough parenting notes into illustrated children's books"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "weasyprint>=62.0",
    "Pillow>=10.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.27.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52.0"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "python-multipart>=0.0.20"]

[project.scripts]
starlight = "main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
