[project]
name = "starlight-scribe"
version = "0.1.0"
description = "Transform rough parenting notes into illustrated children's books"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "weasyprint>=62.0",
    "Pillow>=10.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.27.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52.0"]
otel = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-exporter-prometheus>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "python-multipart>=0.0.20", "starlight-scribe[otel]"]

[project.scripts]
starlight = "main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
